--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <nav>
+            <a href="index.html"> Main Page </a> | 
+            <a href="about.html"> About </a>
+        </nav>
         <title>{{ page.title }}</title>
     </head>
     <body>
