--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
             <a href="about.html"> About </a>
         </nav>
         <title>{{ page.title }}</title>
+        <link rel="icon" type="image/x-icon" href="/_assets/celestialfavicon.ico">
     </head>
     <body>
         <h1>{{page.title}}</h1>
