--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,7 +15,7 @@
             {{content}}
         </section>
         <footer>
-            &copy; to me
+            &copy; Melody Musmacker 2024
         </footer>
     </body>
 </html>
