--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
             <a href="about.html"> About </a>
         </nav>
         <title>{{ page.title }}</title>
-        <link rel="icon" href="/_assets/celestialfavicon.ico">
+        <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
     </head>
     <body>
         <h1>{{page.title}}</h1>
