--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
         </nav>
         <title>{{ page.title }}</title>
         <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
-        <link rel="stylesheet" href="{{'_sass/main.css' | relative_url}}"/>
+        <link rel="stylesheet" href="{{'_sass/base.css' | relative_url}}"/>
     </head>
     <body>
         <h1>{{page.title}}</h1>
