--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
-        <link rel="stylesheet" href="/_sass/base.css"/>
+        <link rel="stylesheet" href="{{ '/assets/css/base.css' | relative_url }}" />
     </head>
     <body>
         <nav>
