--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
-        <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
-        <link rel="stylesheet" href="{{ '/_assets/css/main.css' | relative_url }}" />
+        <link rel="icon" type="image/ico" href="\_assets\celestialfavicon.ico">
+        <link rel="stylesheet" href="{{\_assets\css\main.css' | relative_url }}" />
     </head>
     <body>
         <nav>
