--- a/_assets/css/base.scss
+++ b/_assets/css/base.scss
@@ -1,10 +1,7 @@
 ---
 ---
 
-$font-stack: Helvetica, sans-serif;
-$primary-color: #d63e3e;
-
 body {
-    font: 100% $font-stack;
-    color: $primary-color; 
+    font: 100% , Helvetica, sans-serif;
+    color: #d63e3e; 
 }
