--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
         <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
-        <link rel="stylesheet" href="/_assets/css/base.css" />
+        <link rel="stylesheet" href="/_assets/css/main.css" />
     </head>
     <body>
         <nav>
