--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,8 +2,8 @@
 # Front Matter Blank
 ---
 $font-stack: Helvetica, sans-serif;
-$font-color: #cce6e9;
-$primary-color: #1e0840;
+$font-color: #1e0840;
+$primary-color: #a9abde;
 $secondary-color: #a9abde;
 
 body {
