--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,7 +2,7 @@
 # Front Matter Blank
 ---
 $font-stack: Helvetica, sans-serif;
-$font-color: #1e0840;
+$font-color: #229f26;
 $primary-color: #a9abde;
 $secondary-color: #a9abde;
 
