--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,11 +2,12 @@
 # Front Matter Blank
 ---
 $font-stack: Helvetica, sans-serif;
-$font-color: #229f26;
+$font-color: #190442;
 $primary-color: #a9abde;
 $secondary-color: #a9abde;
 
 body {
     font: 100% $font-stack;
     color: $font-color;
+    background-color: $secondary-color;
 }
