--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>{{ page.title }}</title>
-        <link rel="icon" type="image/ico" href="/_assets/celestialfavicon.ico">
+        <link rel="icon" type="image/x-icon" href="/_assets/celestialfavicon.ico">
         <link rel="stylesheet" href="/assets/css/main.css" />
     </head>
     <body>
