--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,13 @@
     </head>
     <body>
         <nav>
-            <a href="index.html"> Main Page </a> | 
-            <a href="about.html"> About </a>
+            <div class="button">
+                <a href="index.html"> Main Page </a>
+            </div>
+            |
+            <div class="button">
+                <a href="about.html"> About </a>
+            </div> 
         </nav>
         <h1>{{ page.title }}</h1>
         <section>
