--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,3 +11,8 @@ body {
     color: $font-color;
     background: $secondary-color;
 }
+
+button{
+    color: $primary-color;
+    background: $font-color;
+}
