--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,7 @@
 $font-stack: Helvetica, sans-serif;
 $font-color: #190442;
 $primary-color: #a9abde;
-$secondary-color: #a9abde;
+$secondary-color: #d3d4ec;
 
 body {
     font: 100% $font-stack;
