Adjusting Formatting of Navbar
Edited default.html to properly structure the list with "a" rather than "div". Also edited the ul section to have the proper style decleration and turned "div" to "a" in the css stylesheet.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,14 +11,10 @@
         <nav>
             <ul>
                 <li>
-                    <div class="button">
-                        <a href="index.html"> Main Page </a>
-                    </div>
+                    <a class="button" href="index.html"> Main Page </a>
                 </li>
                 <li>
-                    <div class="button">
-                        <a href="about.html"> About </a>
-                    </div> 
+                    <a class="button" href="about.html"> About </a>
                 </li>
             </ul>
         </nav>
