--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,15 +14,14 @@ body {
 
 nav{
     ul{
-        list-style-type: none
+        list-style: none;
     }
     li{
             display: inline-block;
             margin-right: 10px;
     }
-}
-
-a{
-    color: $primary-color;
-    background: $font-color;
+    a{
+        color: $primary-color;
+        background: $font-color;
+    }  
 }
