--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -19,9 +19,11 @@ nav{
     li{
             display: inline-block;
             margin-right: 10px;
+            padding: 5px;
     }
     a{
         color: $primary-color;
         background: $font-color;
+        text-decoration: none;
     }  
 }
