--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,12 +18,12 @@ nav{
     }
     li{
             display: inline-block;
-            margin-right: 10px;
-            padding: 5px;
+            margin-right: 5px
     }
     a{
         color: $primary-color;
         background: $font-color;
         text-decoration: none;
+        padding: 5px
     }  
 }
