--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,7 +21,7 @@ nav{
             margin-right: 1px
     }
     a{
-        color: $primary-color;
+        color: white;
         background: $font-color;
         text-decoration: none;
         padding: 5px
