--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -13,17 +13,18 @@ body {
 }
 
 nav{
+    background: $font-color;
     ul{
         list-style: none;
     }
     li{
             display: inline-block;
-            margin-right: 1px
+            margin-right: 1px;
     }
     a{
         color: white;
-        background: $font-color;
         text-decoration: none;
-        padding: 5px
+        padding: 5px;
+        border: black;
     }  
 }
