--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,8 @@ body {
 
 nav{
     background: $font-color;
+    padding-top: 10px;
+    padding-bottom: 10px;
     ul{
         list-style: none;
     }
