--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@ nav{
     padding-top: 10px;
     padding-bottom: 10px;
     border: black;
-    border-width: 2px
+    border-width: 2px;
     ul{
         list-style: none;
     }
