--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,7 +18,7 @@ nav{
     padding-bottom: 10px;
     border: black;
     border-width: 2px;
-    border-style: none
+    border-style: none;
     
     ul{
         list-style: none;
