--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,11 @@ body {
     background: $secondary-color;
 }
 
+h1{
+    font: 200% $font-stack
+    
+}
+
 nav{
     background: $font-color;
     border: black;
@@ -23,6 +28,8 @@ nav{
     }
     li{
             display: inline-block;
+            border: black;
+            border-left-style: solid;
     }
     a{
         color: white;
@@ -30,7 +37,5 @@ nav{
         padding: 5px;
         padding-top: 10px;
         padding-bottom: 10px;
-        border: black;
-        border-left-style: solid;
     }  
 }
