--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,7 +16,8 @@ h1{
     font: 200% $font-stack;
     color: white;
     background: $font-color;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 nav{
