--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -16,11 +16,9 @@ h1{
     font: 250% Helvetica,sans-serif;
     color: white;
     background: #190442;
-    margin-left: auto;
-    margin-right: auto;
     padding: 10px;
     text-align: center;
-    max-width: 25%;
+    max-width: 25%
 }
 
 h2{
@@ -46,9 +44,5 @@ nav{
         color: white;
         text-decoration: none;
         padding: 5px;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        border: black;
-        border-left-style: solid;
     }  
 }
