--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,9 @@
         <link rel="stylesheet" href="/assets/css/main.css" />
     </head>
     <body>
+        <header>
+            
+        </header>
         <nav>
             <ul>
                 <li>
@@ -23,8 +26,8 @@
                 </li>
             </ul>
         </nav>
-        <h1>{{ page.title }}</h1>
         <section>
+            <h1>{{ page.title }}</h1>
             {{ content }}
         </section>
         <footer>
