--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,7 +22,9 @@ h1{
 h2{
     font: 200% $font-stack;
     color: $font-color;
+    text-align: center;
     background: $primary-color;
+    padding: 5px;
 }
 
 section{
