--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,7 +28,8 @@ h2{
 }
 
 section{
-    align-items: center;
+    align-self: center;
+    align-content: center;
     text-align: center;
     max-width: 75%
 }
