--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,9 +28,9 @@ h2{
 }
 
 section{
-    align-self: center;
     align-content: center;
-    text-align: center;
+    margin-right:auto;
+    margin-left:auto;
     max-width: 75%
 }
 
