--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@ body {
 
 h1{
     font: 250% Helvetica,sans-serif;
+    text-align: center;
     color: white;
     background: #190442;
     padding: 10px;
