--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -25,6 +25,7 @@ h2{
     color: $font-color;
     text-align: center;
     background: $primary-color;
+    max-width: 90%;
     padding: 5px;
 }
 
