--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,14 +2,14 @@
 # Front Matter Blank
 ---
 $font-stack: Helvetica, sans-serif;
-$font-color: #190442;
-$primary-color: #a9abde;
-$secondary-color: #d3d4ec;
+$primary-color: #28215D;
+$secondary-color: #4E3FBE;
+$accent-color: #8F85D8;
 
 body {
     font: 100% $font-stack;
-    color: $font-color;
-    background: $secondary-color;
+    color: black;
+    background: white;
     margin: 0;
 }
 
@@ -19,13 +19,14 @@ h1{
     color: white;
     background: #190442;
     padding: 10px;
+    margin: 0;
 }
 
 h2{
     font: 200% $font-stack;
-    color: $font-color;
+    color: white;
     text-align: center;
-    background: $primary-color;
+    background: $secondary-color;
     max-width: 90%;
     padding: 5px;
 }
@@ -38,7 +39,7 @@ section{
 }
 
 nav{
-    background: $font-color;
+    background: $primary-color;
     border: black;
     border-width: 1px;
     border-style: solid;
