--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -17,7 +17,7 @@ h1{
     font: 250% Helvetica,sans-serif;
     text-align: center;
     color: white;
-    background: #190442;
+    background: $secondary-color;
     padding: 10px;
     margin: 0;
 }
