--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -11,6 +11,8 @@ body {
     color: black;
     background: white;
     margin: 0;
+    background-image: url('https://astralobserver.github.io/assets/stars-galaxy.gif');
+    background-size: cover;
 }
 
 h1{
